--- a/PaintStoragev2MVC/bin/PaintStoragev2MVC.dll.config
+++ b/PaintStoragev2MVC/bin/PaintStoragev2MVC.dll.config
@@ -57,7 +57,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="PaintStorageDBEntities" connectionString="metadata=res://*/Models.DBModels.csdl|res://*/Models.DBModels.ssdl|res://*/Models.DBModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-FUIA7EO\TEST;initial catalog=PaintStorageDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DBModel" connectionString="metadata=res://*/Models.DBModels.csdl|res://*/Models.DBModels.ssdl|res://*/Models.DBModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-FUIA7EO\TEST;initial catalog=20220424TestMVCDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
